fdo#63273 sw: let word count not update stat. fields

Updating fields would generate loads of selection change events and it's
not what we asked for.

Regression from ce14342c4292628a641a72d4f63d9c048e030c6a.

Change-Id: If237df1f31436357022ca8d77b924681e403abd8